Fix tooltip text alignment so that it will always be aligned left.

--- a/src/components/data-display/Tooltip/Tooltip.css
+++ b/src/components/data-display/Tooltip/Tooltip.css
@@ -1,3 +1,4 @@
 .mpc-tooltip {
   font-weight: normal;
+  text-align: left;
 }
